@@ -124,6 +124,7 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [General] For only *asap actions don't save AccountIDs withing ActionPlans
   * [AnalyzerS] Added AnalyzerSv1.StringQuery API to search over the recorded RPC calls
   * [CoreS] Moved the server implementation in the new cores package
+  * [RouteS] In case of same weight sort random
   
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
